# lagrappe_back

./: Cargo.toml
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/event_handler/: mod.rs
driven/datasource/: Cargo.toml
driven/datasource/src/: lib.rs
driven/local_settings/: Cargo.toml
driven/local_settings/src/: lib.rs
driven/local_settings_provider/: Cargo.toml
driven/local_settings_provider/src/: lib.rs
driven/plugin_hub/: Cargo.toml
driven/plugin_hub/src/: lib.rs
driven/plugin_manager/: Cargo.toml
driven/plugin_manager/src/: lib.rs
driving/: Cargo.toml
driving/src/: lib.rs
lagrappe_back/: Cargo.toml
lagrappe_back/src/: main.rs
