[package]
name = "lagrappe_back"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
datasource = { path = "../driven/datasource" }
plugin_manager = { path = "../driven/plugin_manager" }
local_settings = { path = "../driven/local_settings" }
plugin_hub = { path = "../driven/plugin_hub" }
driving = { path = "../driving" }

tokio = { version = "1", features = ["full"] }

env_logger = { workspace = true }
log = { workspace = true }
